--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,31 +1,79 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
 en:
-  hello: "Hello world"
+  application:
+    form:
+      error: "%{count_string} prohibited this %{item} from being saved:"
+      submit: "Go !"
+    link:
+      label:
+        back: "Back to %{items}"
+        show: "Show this %{item}"
+        new: "New %{item}"
+        edit: "Edit this %{item}"
+        destroy: "Destroy this %{item}"
+    item:
+      action:
+        show: "Show"
+        edit: "Edit"
+        destroy: "Destroy"
+        confirm: "Are you sure?"
+    user:
+      logged_as: "Logged in as %{email_link}"
+      links:
+        label:
+          edit_profile: "Edit profile"
+          logout: "Logout"
+          sign_up: "Sign up"
+          login: "Login"
+  user:
+    title: "Your Profile"
+    labels:
+      email: "Email"
+      actions: "Actions"
+    link:
+      edit: "Edit My Account"
+      reset_password: "Reset password"
+      delete: "Delete My Account"
+  spot:
+    labels:
+      name: "Name"
+      description: "Description"
+      latitude: "Latitude"
+      longitude: "Longitude"
+      wave_size: "Wave size"
+      difficulty: "Difficulty"
+      best_season: "Best season"
+      actions: "Actions"
+    index:
+      title: "Spots"
+    new:
+      title: "New spot"
+    create:
+      success: "Spot was successfully created."
+    edit:
+      title: "Editing spot"
+    update:
+      success: "Spot was successfully updated."
+    destroy:
+      success: "Spot was successfully destroyed."
+      failure: "Spot can not be destroyed."
+
+    labels:
+      title: "Title"
+      date: "Date"
+      spot_name: "Spot Name"
+      deep: "Deep"
+      divetime: "Dive Time"
+      actions: "Actions"
+    index:
+      title: "Dives"
+    new:
+      title: "New dive"
+    create:
+      success: "Dive was successfully created."
+    edit:
+      title: "Editing dive"
+    update:
+      success: "Dive was successfully updated."
+    destroy:
+      success: "Dive was successfully destroyed."
+      failure: "Dive can not be destroyed."
